[gd_scene load_steps=4 format=3 uid="uid://dyna2g6xptklc"]

[ext_resource type="Script" uid="uid://cmigoxl8ki4yp" path="res://try_again.gd" id="1_y26ei"]
[ext_resource type="Script" uid="uid://bylb6fwmh0qt8" path="res://game_over.gd" id="1_yxx3c"]
[ext_resource type="AudioStream" uid="uid://bjm25naefl5mb" path="res://Assets/Brett Sounds/Voices/You Died.wav" id="3_ccer4"]

[node name="GameOver" type="Node"]
script = ExtResource("1_yxx3c")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER!!!"

[node name="YourFinalScore" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = 0.5
offset_right = 65.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 0
text = "Your Final Score:"
horizontal_alignment = 1

[node name="ScoreAmount" type="Label" parent="Control/GameOver/YourFinalScore"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -19.5
offset_top = 6.0
offset_right = 20.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control/GameOver/YourFinalScore/ScoreAmount"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = 9.0
offset_right = 48.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"
script = ExtResource("1_y26ei")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ccer4")

[connection signal="pressed" from="Control/GameOver/YourFinalScore/ScoreAmount/Button" to="Control/GameOver/YourFinalScore/ScoreAmount/Button" method="_on_pressed"]
